src/objects/crms11__Client_Pricing__c.object
<CustomObject>
    <description>FlexPricer Client Price object to manage data relating to products having a fixed price for an Account.</description>
    <fields>
        <fullName>crms11__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Prices</relationshipLabel>
        <relationshipName>Client_Price_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>crms11__Client_Price__c</fullName>
        <label>Client Price</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>crms11__Eligible_for_Account_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked then Account Discount will be applied the client price record.</description>
        <inlineHelpText>If checked then Account Discount will be applied the client price record.</inlineHelpText>
        <label>Eligible for Account Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Expiry_date__c</fullName>
        <description>Allow client prices to expire on a given date.  After the date, the client price is to no longer apply.</description>
        <label>Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>crms11__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Client_Price_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Client Price</label>
    <listViews>
        <fullName>crms11__All</fullName>
        <columns>NAME</columns>
        <columns>crms11__Account__c</columns>
        <columns>crms11__Product__c</columns>
        <columns>crms11__Client_Price__c</columns>
        <columns>crms11__Eligible_for_Account_Discount__c</columns>
        <columns>crms11__Expiry_date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPID-{00000}</displayFormat>
        <label>Client Price ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>